# Task-Allocator

./: .gitignore  README.md  pyproject.toml
common/: models.py
config/: settings.py  urls.py
tasks/: models.py  serializers.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_subtask_task.py  0004_alter_subtask_task.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
